internal/gatewayapi/testdata/httproute-with-backendref-urlrewrite-filter.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      rules:
        - matches:
            - path:
                value: "/test"
          backendRefs:
            - name: service-1
              port: 8080
              weight: 50
              filters:
                - type: URLRewrite
                  urlRewrite:
                    hostname: "rewritten-host-a.example.com"
            - name: service-2
              port: 8080
              weight: 50
              filters:
                - type: URLRewrite
                  urlRewrite:
                    hostname: "rewritten-host-b.example.com"
